--- a/frontend/src/app/components/ListProjects/ListProjects.module.css
+++ b/frontend/src/app/components/ListProjects/ListProjects.module.css
@@ -4,7 +4,7 @@
     justify-content: center; /* Center the cards */
     padding: 20px;
     gap: 20px; /* Space between cards */
-    padding-top: 110px;
+    padding-top: 90px;
 }
 
 .card {
@@ -86,6 +86,8 @@
 .uploadSection {
     text-align: center; /* Center the upload section */
     margin: 40px 0; /* Margin around the section */
+    border-bottom: 1px solid rgb(13, 11, 11);
+    padding-bottom: 15px;
 }
 
 .uploadSection h1 {
